# MicuSubCodeLine

./: .gitignore  Cargo.toml  README.md  README.zh.md  README_SUB2API.md  cliff.toml  lefthook.yml  subscription_config.txt.example
.github/workflows/: ci.yml  release.yml
npm/main/: README.md  package.json
npm/main/scripts/: postinstall.js
npm/scripts/: prepare-packages.js
src/: cli.rs  lib.rs  main.rs  updater.rs
src/config/: defaults.rs  loader.rs  mod.rs  models.rs  types.rs
src/core/: mod.rs  statusline.rs
src/core/segments/: context_window.rs  cost.rs  directory.rs  git.rs  mod.rs  model.rs  output_style.rs  session.rs  subscription.rs  update.rs  usage.rs
src/ui/: app.rs  events.rs  layout.rs  main_menu.rs  mod.rs
src/ui/components/: color_picker.rs  editor.rs  help.rs  icon_selector.rs  mod.rs  name_input.rs  preview.rs  segment_list.rs  separator_editor.rs  settings.rs  theme_selector.rs
src/ui/themes/: mod.rs  presets.rs  theme_cometix.rs  theme_default.rs  theme_gruvbox.rs  theme_minimal.rs  theme_nord.rs  theme_powerline_dark.rs  theme_powerline_light.rs  theme_powerline_rose_pine.rs  theme_powerline_tokyo_night.rs
src/utils/: claude_code_patcher.rs  credentials.rs  mod.rs  setup_wizard.rs  subscription_api.rs
