[package]
name = "micusubcodeline"
version = "1.0.0"
edition = "2021"
description = "MicuSubCodeLine - Claude Code StatusLine with Sub2API subscription integration"
authors = ["Haleclipse", "Sub2API Extension"]
license = "MIT"
repository = "https://github.com/zuoliangyu/MicuSubCodeLine"
readme = "README.md"
keywords = ["claude", "statusline", "subscription", "rust", "claude-code"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dirs = "5.0"

ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

ansi_term = { version = "0.12", optional = true }
ansi-to-tui = { version = "7.0", optional = true }

ureq = { version = "2.10", features = ["json"], optional = true }
semver = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
regex = "1.0"



[features]
default = ["tui", "self-update"]
tui = ["ratatui", "crossterm", "ansi_term", "ansi-to-tui", "chrono"]
self-update = ["ureq", "semver", "chrono"]
